--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
 body {
-    margin: 0;
+    margin: 0px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Vollkorn', serif;
+    color: #09382C;
+}
+
+.custom-button {
+    padding: 15 60px;
+    background-color: white;
+    border: 3px solid #00A499;
+    box-shadow: 10 10 0 0px #00A499;
+    font-family: 'Lexend Tera', sans-serif;
+    font-size: 1em;
 }
 
 /* #region Main Layout */
@@ -12,28 +26,33 @@ body {
     left: 50%;
     transform: translateX(-50%);
 
-    background-color: aquamarine;
+    font-family: 'Lexend Tera', sans-serif;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.main-front-page {
+    background-color: #D3F1E8;
+    height: 780px;
 
 }
 
-.main-front-menu {
-
-}
-
-.contaioner {
-
+.container {
+    height: 880px;
 }
 
 /* #endregion */
 
 /* #region Menu Bar */
 
+.main-menu-bar svg {
+    fill: #00A499;
+}
+
 .main-menu-bar .main-logo {
-    
+
 }
 
 .main-menu-bar .navigation {
@@ -48,20 +67,38 @@ body {
 
 .main-menu-bar .navigation nav ul li{
     list-style: none;
-    margin: 0 54px;
+    margin: 0 25px;
     text-transform: uppercase;
+    font-size: 0.8em;
 }
 
 .main-menu-bar .shopping-cart-button {
-    background-color: pink;
     width: 110px;
     height: 110px;
-    display: relative;
+    position: relative;
 }
 
 .main-menu-bar .shopping-cart-button svg {
     position: absolute;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
 }
 /* $endregion */
+
+/* region Main Page */
+
+.main-front-page .front-title {
+    height: 100%;
+    box-sizing: border-box;
+    padding: 200 20px;
+    text-align: center;
+}
+
+.main-front-page .front-title h1 {
+    font-size:  60px;
+    font-weight: 400;
+    line-height: 1.3;
+
+}
+/* #endregion */
